--- a/HW_week6_OhadShaked/PART-2/PART-2.vcxproj
+++ b/HW_week6_OhadShaked/PART-2/PART-2.vcxproj
@@ -128,16 +128,22 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Hexagon.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MathUtils.cpp" />
     <ClCompile Include="Parallelogram.cpp" />
+    <ClCompile Include="Pentagon.cpp" />
     <ClCompile Include="Quadrilateral.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Shape.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="Hexagon.h" />
     <ClInclude Include="InputException.h" />
+    <ClInclude Include="MathUtils.h" />
     <ClInclude Include="Parallelogram.h" />
+    <ClInclude Include="Pentagon.h" />
     <ClInclude Include="Quadrilateral.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Shape.h" />
